5_yaml/17_volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
spec:
  containers:
  - image: ubuntu
    command: 
    - "sleep"
    - "500000"
    name: test
    volumeMounts:
    - mountPath: /test
      name: test-volume
  volumes:
  - name: test-volume
    hostPath:
      path: /data
      type: DirectoryOrCreate  #Or just Directory
