5_yaml/16_network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mypolicy1
  namespace: default
spec:
  podSelector:
    matchLabels:
      type: test
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx-ingress
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nginx-ingress
      ports:
        - protocol: TCP
          port: 80
